Fix an issue which caused confirmation popup to go offscreen. Update styles.

--- a/src/components/AccountMenu/AccountMenu.module.scss
+++ b/src/components/AccountMenu/AccountMenu.module.scss
@@ -50,6 +50,7 @@
   height: 100%;
   z-index: 999999;
   background-color: rgba($color-text, 0.1);
+  backdrop-filter: blur(1px);
 }
 
 .optionsContainer {
