--- a/src/components/FormsContainer/FormsContainer.module.scss
+++ b/src/components/FormsContainer/FormsContainer.module.scss
@@ -119,6 +119,7 @@
   transition: all 0.2s ease;
   flex: 1;
   min-height: 40px;
+  position: relative;
 
   &.activeTab {
     background-color: rgba($color-primary, 0.12);
